swagger配置修复
