# server/api/v1/system/sys_user.go
@@ -64,7 +64,7 @@ func (u *UserApi) ResetPassword(c *gin.Context) {
 // @Produce	application/json
 // @Param	id	path	int	true	"用户ID"
 // @Success	200	{object}	response.Response{code=int,data=any,msg=string}
-// @Router	/user/enable/:{id} [put]
+// @Router	/user/enable/:id [put]
 func (u *UserApi) EnableUser(c *gin.Context) {
 	id := c.Param("id")
 	if id == "" {
@@ -89,7 +89,7 @@ func (u *UserApi) EnableUser(c *gin.Context) {
 // @Produce	application/json
 // @Param	id	path	int	true	"用户ID"
 // @Success	200	{object}	response.Response{code=int,data=any,msg=string}
-// @Router	/user/disable/:{id} [put]
+// @Router	/user/disable/:id [put]
 func (u *UserApi) DisableUser(c *gin.Context) {
 	id := c.Param("id")
 	if id == "" {
@@ -109,7 +109,7 @@ func (u *UserApi) DisableUser(c *gin.Context) {
 	response.Success(nil, "操作成功", c)
 }
 
-// DisableUser
+// DeleteUser
 // @Tags	user
 // @Summary	删除用户
 // @Security  ApiKeyAuth
@@ -117,7 +117,7 @@ func (u *UserApi) DisableUser(c *gin.Context) {
 // @Produce	application/json
 // @Param	id	path	int	true	"用户ID"
 // @Success	200	{object}	response.Response{code=int,data=any,msg=string}
-// @Router	/user/disable/:{id} [delete]
+// @Router	/user/delete/:id [delete]
 func (u *UserApi) DeleteUser(c *gin.Context) {
 	id := c.Param("id")
 	if id == "" {
